# kerkenez

./: .gitignore  Cargo.toml  LICENCE
.github/workflows/: ci.yaml
examples/: basic_window.rs  simple_window.rs  street.rs
examples/street/: Cargo.toml
examples/street/src/: main.rs
shaders/: common.glsl  composite.frag  fragment.frag  fullscreen.vert  geometry.frag  geometry.vert  post_fragment.frag  ssao.frag  ssao_blur.frag  vertex.vert
src/: error.rs  lib.rs  prelude.rs
src/app/: config.rs  mod.rs
src/behaviour/: mod.rs
src/camera/: frustum.rs  mod.rs  orthographic.rs  perspective.rs
src/input/: keyboard.rs  mod.rs
src/mesh/: aabb.rs  instance.rs  mod.rs  primitives.rs  vertex.rs
src/renderer/: buffer.rs  color.rs  context.rs  draw_command.rs  light.rs  material.rs  mod.rs  pipeline.rs  shader.rs  texture.rs
src/renderer/lights/: directional_light.rs  mod.rs  point_light.rs
src/renderer/post_process/: fbo.rs  fullscreen_triangle.rs  mod.rs  settings.rs
src/renderer/post_processing/: fullscreen_pass.rs  gbuffer.rs  mod.rs  render_target.rs  settings.rs
