[package]
name = "kerkenez"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.32.1", features = ["bytemuck"] }
glow = "0.17.0"
glutin = "0.32.3"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"
winit = "0.30.13"
rand = "0.8.5"
image = "0.25.10"
bytemuck = { version = "1.25.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
debug = true
